test/errors/already_declared.correct
error: already_declared.li:6:4: function 'test' is already declared in this scope
│ fn test()
│ ~~~~~~~~~
│    ^
