test/errors/already_declared.out
error: already_declared.li:6:1: 'test' is already defined
│ fn test()
│ ~~~~~~~~~
│    ^
test
